apps/base/it-tools/it-tools-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: it-tools-ingressroute
  namespace: it-tools
  annotations:
    gethomepage.dev/href: "https://it-tools.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "IT - Tools"
    gethomepage.dev/description: "Collection of handy online tools for developers"
    gethomepage.dev/app: it-tools
    gethomepage.dev/group: "Tools"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons/svg/it-tools.svg"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`it-tools.lab.mainertoo.com`)
      kind: Rule
      middlewares:
        - name: authentik-sso
          namespace: traefik-system
      services:
        - name: it-tools
          port: 80
          scheme: http
  tls: {}
